fix: tigethen up spacing on landscapes page (match FAQ)

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -137,22 +137,25 @@
 	}
 }
 
-.slug-faq .entry-content {
-	h2 {
-		margin-top: 6rem;
-		font-weight: bold;
-	}
-
-	h3 {
-		font-size: 1.5rem;
-
-		+ p {
-			margin-block-start: 0;
+.slug-landscapes,
+.slug-faq {
+	.entry-content {
+		h2 {
+			margin-top: 6rem;
+			font-weight: bold;
 		}
-	}
 
-	ul {
-		margin-top: -1.4rem;
+		h3 {
+			font-size: 1.5rem;
+
+			+ p {
+				margin-block-start: 0;
+			}
+		}
+
+		ul {
+			margin-top: -1.4rem;
+		}
 	}
 }
 
@@ -530,14 +533,6 @@ main {
 @media screen and (min-width: 768px) {
 	.tg-header-action-list .tg-header-action__item.tg-mobile-toggle .tg-icon-bars {
 		padding-left: 5px;
-	}
-
-	.home {
-		.hero {
-			figure {
-				margin: 0;
-			}
-		}
 	}
 }
 
